# tarefa3_mc886

./: mc886_1s2026_assignment_3.ipynb  pyproject.toml
